framec_tests/language_specific/python/v3_facade_smoke/negative/strict_bad_indentation.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1)
                if True:
                  x = 1
                     y = 2  # inconsistent indentation
            }
        }
        $B {
        }
}

